--- a/plugin.xml
+++ b/plugin.xml
@@ -2,17 +2,16 @@
 <plugin xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:noNamespaceSchemaLocation="../../../engine/Shopware/Components/Plugin/schema/plugin.xsd">
 
-    <label>TinectMailArchive</label>
+    <label>FroshMailArchive</label>
 
-    <version>1.0.3</version>
-    <copyright>(c) by tinect</copyright>
+    <version>1.0.0</version>
+    <copyright>Friends of Shopware</copyright>
     <license>MIT</license>
     <link>https://github.com/FriendsOfShopware/FroshMailArchive</link>
-    <author>tinect</author>
+    <author>Friends of Shopware</author>
     <compatibility minVersion="5.2.0" />
 
 	<description><![CDATA[
-<a href="https://github.com/FriendsOfShopware/FroshMailArchive" target="_blank" style="color:red">This project has been transfered to FriendsOfShopware/FroshMailArchive</a>
 <p>This plugins adds an MailArchive to your Shopware-Backend</p>
 
 <h3 id="features">Features</h3>
@@ -33,51 +32,15 @@
 <h2 id="contributing">Contributing</h2>
 <p>Feel free to fork and send <a href="https://github.com/FriendsOfShopware/FroshMailArchive" target="_blank">pull requests</a>!</p>
 
-<p>Please note: TinectMailArchive won't catch your mails, to prevent sending mails from your shop! Use MailCatcher for this job, as it is a job in developing-state.</p>
+<p>Please note: FroshMailArchive won't catch your mails, to prevent sending mails from your shop! Use MailCatcher for this job, as it is a job in developing-state.</p>
 <p>Thanks to <a href="https://github.com/FriendsOfShopware/FroshMailCatcher" target="_blank">@FroshMailCatcher</a> for your work!</p>
 
         ]]>
     </description>
 
-    <changelog version="1.0.3">
-        <changes lang="de"><![CDATA[
-        - Projekt-Transfer<br/>
-        ]]></changes>
-        <changes><![CDATA[
-        - project transfer<br/>
-        ]]></changes>
-    </changelog>
-
-    <changelog version="1.0.2">
-        <changes lang="de"><![CDATA[
-        - fix Download von Attachments<br/>
-        ]]></changes>
-        <changes><![CDATA[
-        - fix download of attachments<br/>
-        ]]></changes>
-    </changelog>
-    
-    <changelog version="1.0.1">
-        <changes lang="de"><![CDATA[
-        - Tooltips bei den Mails<br/>
-        - Bestätigungsfenster beim Leeren des Archivs<br/>
-        - Optimiere Größe der Fenster<br/>
-        ]]></changes>
-        <changes><![CDATA[
-        - Tooltips in maillist<br/>
-        - add conformMessageBox before clearing archive<br/>
-        - set maxwidth for mail-container<br/>
-        ]]></changes>
-    </changelog>
-
     <changelog version="1.0.0">
         <changes lang="de">Veröffentlichung</changes>
         <changes>Release</changes>
-    </changelog>
-
-    <changelog version="0.0.1">
-        <changes lang="de">Erstveröffentlichung</changes>
-        <changes>First release</changes>
     </changelog>
 
 </plugin>
