--- a/.travis.yml
+++ b/.travis.yml
@@ -1,22 +1,45 @@
 language: php
+
 php:
   - 7.1
   - 7.2
+
 sudo: false
+
 env:
+  matrix:
+    - SHOPWARE_VERSION="5.5"
   global:
   - PLUGIN_NAME=FroshMailArchive
+  - SHOPWARE_DIRECTORY="${HOME}/shopware"
+  - PLUGIN_DIRECTORY="${SHOPWARE_DIRECTORY}/custom/plugins"
+
 cache:
   directories:
     - ${HOME}/.composer/cache/files
+
 install:
   - composer install
+
+before_script:
+  - mysql -e 'CREATE DATABASE shopware;'
+  - if [[ "$(php --version | grep -cim1 xdebug)" -ge 1 ]]; then phpenv config-rm xdebug.ini; fi
+  - git clone https://github.com/shopware/shopware.git ${SHOPWARE_DIRECTORY} --branch ${SHOPWARE_VERSION}
+  - ant -f ${SHOPWARE_DIRECTORY}/build/build.xml -Dapp.host=localhost -Ddb.user=travis -Ddb.host=127.0.0.1 -Ddb.name=shopware build-unit
+  - mv ${TRAVIS_BUILD_DIR} ${PLUGIN_DIRECTORY}/${PLUGIN_NAME}
+  - php ${HOME}/shopware/bin/console sw:plugin:refresh
+  - php ${HOME}/shopware/bin/console sw:plugin:install ${PLUGIN_NAME}
+  - php ${HOME}/shopware/bin/console sw:plugin:activate ${PLUGIN_NAME}
+  - cd ${PLUGIN_DIRECTORY}/${PLUGIN_NAME}
+
 script:
   - wget 'https://github.com/FriendsOfShopware/FroshPluginUploader/blob/master/frosh-plugin-upload.phar?raw=true' -O frosh-plugin-upload.phar
   - php frosh-plugin-upload.phar plugin:update ${PLUGIN_DIRECTORY}/${PLUGIN_NAME}/Resources/store
+
 after_success:
   - chmod +x ./build.sh
   - ./build.sh $TRAVIS_TAG
+
 deploy:
   provider: releases
   api_key:
