--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,14 @@ php:
 
 sudo: false
 
+services:
+  - mysql
+
 env:
   matrix:
+    - SHOPWARE_VERSION="5.2"
+    - SHOPWARE_VERSION="5.3"
+    - SHOPWARE_VERSION="5.4"
     - SHOPWARE_VERSION="5.5"
   global:
   - PLUGIN_NAME=FroshMailArchive
@@ -32,13 +38,44 @@ before_script:
   - php ${HOME}/shopware/bin/console sw:plugin:activate ${PLUGIN_NAME}
   - cd ${PLUGIN_DIRECTORY}/${PLUGIN_NAME}
 
-script:
-  - wget 'https://github.com/FriendsOfShopware/FroshPluginUploader/blob/master/frosh-plugin-upload.phar?raw=true' -O frosh-plugin-upload.phar
-  - php frosh-plugin-upload.phar plugin:update ${PLUGIN_DIRECTORY}/${PLUGIN_NAME}/Resources/store
-
 after_success:
   - chmod +x ./build.sh
   - ./build.sh $TRAVIS_TAG
+
+stages:
+  - Store-Check
+  - name: Store-Sync
+    if: branch = master
+  - name: Store-Deploy
+    if: tag IS present
+
+jobs:
+  include:
+    - stage: Store-Check
+      php: 7.3
+      before_script: skip
+      install:
+        - chmod +x ./build.sh
+        - ./build.sh master
+        - wget 'https://github.com/FriendsOfShopware/FroshPluginUploader/blob/master/frosh-plugin-upload.phar?raw=true' -O frosh-plugin-upload.phar
+      script:
+        - php frosh-plugin-upload.phar plugin:validate ${TRAVIS_BUILD_DIR}/${PLUGIN_NAME}*.zip
+    - stage: Store-Sync
+      before_script: skip
+      php: 7.3
+      install:
+        - wget 'https://github.com/FriendsOfShopware/FroshPluginUploader/blob/master/frosh-plugin-upload.phar?raw=true' -O frosh-plugin-upload.phar
+      script:
+        - php frosh-plugin-upload.phar plugin:update ${TRAVIS_BUILD_DIR}/Resources/store
+    - stage: Store-Deploy
+      before_script: skip
+      php: 7.3
+      install:
+        - wget 'https://github.com/FriendsOfShopware/FroshPluginUploader/blob/master/frosh-plugin-upload.phar?raw=true' -O frosh-plugin-upload.phar
+      script:
+        - chmod +x ./build.sh
+        - ./build.sh
+        - php frosh-plugin-upload.phar plugin:upload ${TRAVIS_BUILD_DIR}/${PLUGIN_NAME}*.zip
 
 deploy:
   provider: releases
