--- a/plugin.xml
+++ b/plugin.xml
@@ -5,7 +5,7 @@
     <label>Mail Archive</label>
     <label lang="de">Mail Archive</label>
 
-    <version>1.0.0</version>
+    <version>1.0.1</version>
     <copyright>Friends of Shopware</copyright>
     <license>MIT</license>
     <link>https://github.com/FriendsOfShopware/FroshMailArchive</link>
@@ -54,6 +54,11 @@
 
         ]]>
     </description>
+
+    <changelog version="1.0.1">
+        <changes lang="de">Verbessere Vorschau</changes>
+        <changes>Optimize preview</changes>
+    </changelog>
 
     <changelog version="1.0.0">
         <changes lang="de">Veröffentlichung</changes>
