--- a/plugin.xml
+++ b/plugin.xml
@@ -56,7 +56,7 @@
     </description>
 
     <changelog version="1.0.1">
-        <changes lang="de">Verbessere Vorschau</changes>
+        <changes lang="de">Verbesserte Vorschau</changes>
         <changes>Optimize preview</changes>
     </changelog>
 
