--- a/plugin.xml
+++ b/plugin.xml
@@ -5,7 +5,7 @@
     <label>Mail Archive</label>
     <label lang="de">Mail Archive</label>
 
-    <version>1.0.1</version>
+    <version>1.0.2</version>
     <copyright>Friends of Shopware</copyright>
     <license>MIT</license>
     <link>https://github.com/FriendsOfShopware/FroshMailArchive</link>
@@ -47,6 +47,11 @@
 
         ]]>
     </description>
+
+    <changelog version="1.0.2">
+        <changes lang="de">Zeige Beschriftung in Benutzersprache</changes>
+        <changes>Display Labels in users language</changes>
+    </changelog>
 
     <changelog version="1.0.1">
         <changes lang="de">Verbesserte Vorschau</changes>
