--- a/.travis.yml
+++ b/.travis.yml
@@ -48,6 +48,7 @@ after_success:
   - ./build.sh $TRAVIS_TAG
 
 stages:
+  - test
   - name: Store-Check
     if: tag IS blank AND env(PLUGIN_ID) IS present AND type != pull_request
   - name: Store-Sync
