--- a/.travis.yml
+++ b/.travis.yml
@@ -59,21 +59,21 @@ jobs:
       install:
         - chmod +x ./build.sh
         - ./build.sh ${TRAVIS_BRANCH}
-        - wget 'https://github.com/FriendsOfShopware/FroshPluginUploader/blob/master/frosh-plugin-upload.phar?raw=true' -O frosh-plugin-upload.phar
+        - wget 'https://github.com/FriendsOfShopware/FroshPluginUploader/releases/download/0.1.0/frosh-plugin-upload.phar' -O frosh-plugin-upload.phar
       script:
         - php frosh-plugin-upload.phar plugin:validate ${TRAVIS_BUILD_DIR}/${PLUGIN_NAME}*.zip
     - stage: Store-Sync
       before_script: skip
       php: 7.3
       install:
-        - wget 'https://github.com/FriendsOfShopware/FroshPluginUploader/blob/master/frosh-plugin-upload.phar?raw=true' -O frosh-plugin-upload.phar
+        - wget 'https://github.com/FriendsOfShopware/FroshPluginUploader/releases/download/0.1.0/frosh-plugin-upload.phar' -O frosh-plugin-upload.phar
       script:
         - php frosh-plugin-upload.phar plugin:update ${TRAVIS_BUILD_DIR}/Resources/store
     - stage: Store-Deploy
       before_script: skip
       php: 7.3
       install:
-        - wget 'https://github.com/FriendsOfShopware/FroshPluginUploader/blob/master/frosh-plugin-upload.phar?raw=true' -O frosh-plugin-upload.phar
+        - wget 'https://github.com/FriendsOfShopware/FroshPluginUploader/releases/download/0.1.0/frosh-plugin-upload.phar' -O frosh-plugin-upload.phar
       script:
         - chmod +x ./build.sh
         - ./build.sh
