--- a/plugin.xml
+++ b/plugin.xml
@@ -48,6 +48,11 @@
         ]]>
     </description>
 
+    <changelog version="1.0.4">
+        <changes lang="de">Kompatibilitäts-Update für Shopware 5.6</changes>
+        <changes>Compatibility update for Shopware 5.6</changes>
+    </changelog>
+
     <changelog version="1.0.3">
         <changes lang="de">Behebe Probleme mit Attachment-Streams (z.B. Shopware ERP)</changes>
         <changes>Fix attachments as stream (f.e. used by Shopware ERP)</changes>
