--- a/plugin.xml
+++ b/plugin.xml
@@ -5,7 +5,7 @@
     <label>Mail Archive</label>
     <label lang="de">Mail Archive</label>
 
-    <version>1.0.3</version>
+    <version>1.0.4</version>
     <copyright>Friends of Shopware</copyright>
     <license>MIT</license>
     <link>https://github.com/FriendsOfShopware/FroshMailArchive</link>
@@ -47,6 +47,11 @@
 
         ]]>
     </description>
+
+    <changelog version="1.0.4">
+        <changes lang="de">Kompatibilitäts-Update für Shopware 5.6</changes>
+        <changes>Compatibility update for Shopware 5.6</changes>
+    </changelog>
 
     <changelog version="1.0.3">
         <changes lang="de">Behebe Probleme mit Attachment-Streams (z.B. Shopware ERP)</changes>
