Add resending of emails with attachments

--- a/Resources/snippets/froshmailarchive.ini
+++ b/Resources/snippets/froshmailarchive.ini
@@ -7,9 +7,12 @@ action_download = "Downloaden"
 label_senddate = "Datum"
 label_tomail = "Empfänger"
 action_delete = "Löschen"
+action_resend = "Nochmals senden"
 action_cleararchive = "Archiv leeren"
 label_search = "Suche..."
 label_suretoclear = "Bist du dir sicher, dass du das Archiv leeren möchtest?"
+send_success_title = "Senden erfolgreich"
+send_error_title = "Senden fehlgeschlagen"
 
 [en_GB]
 label_frommail = "Sender"
@@ -20,9 +23,12 @@ action_download = "Download"
 label_senddate = "Date"
 label_tomail = "Recipients"
 action_delete = "Delete"
+action_resend = "Resend"
 action_cleararchive = "Clear Archive"
 label_search = "Search..."
 label_suretoclear = "Are you sure you want to clear the archive?"
+send_success_title = "Success sending mail"
+send_error_title = "Error sending mail"
 
 [fr_FR]
 label_frommail = "Expéditeur"
@@ -33,9 +39,12 @@ action_download = "Télécharger"
 label_senddate = "Date"
 label_tomail = "Destinataire"
 action_delete = "Supprimer"
+action_resend = "Envoyer"
 action_cleararchive = "Archive vide"
 label_search = "Recherche..."
 label_suretoclear = "Êtes-vous sûr de vouloir vider l'archive?"
+send_success_title = "Bien envoyé"
+send_error_title = "Erreur d'envoi"
 
 [nl_NL]
 label_frommail = "Afzender"
@@ -46,9 +55,12 @@ action_download = "Downloaden"
 label_senddate = "Datum"
 label_tomail = "Ontvangers"
 action_delete = "Wissen"
+action_resend = "Sturen"
 action_cleararchive = "Leeg archief"
 label_search = "Zoeken ..."
 label_suretoclear = "Weet je zeker dat je het archief wilt leegmaken?"
+send_success_title = "Succesvol verzonden"
+send_error_title = "Fout bij verzenden"
 
 [es_ES]
 label_frommail = "Emisor"
@@ -59,9 +71,12 @@ action_download = "Descargar"
 label_senddate = "Fecha"
 label_tomail = "Destinatarios"
 action_delete = "Eliminar"
+action_resend = "Enviar"
 action_cleararchive = "Archivo vacío"
 label_search = "Buscar..."
 label_suretoclear = "¿Estás seguro de que quieres vaciar el archivo?"
+send_success_title = "Enviado correctamente"
+send_error_title = "Error al enviar"
 
 [it_IT]
 label_frommail = "Mittente"
@@ -72,6 +87,9 @@ action_download = "Scarica"
 label_senddate = "Data"
 label_tomail = "Destinatari"
 action_delete = "Elimina"
+action_resend = "Spedire"
 action_cleararchive = "Archivio vuoto"
 label_search = "Cerca..."
 label_suretoclear = "Sei sicuro di voler svuotare l'archivio?"
+send_success_title = "Inviato con successo"
+send_error_title = "Errore durante l'invio"
