--- a/plugin.xml
+++ b/plugin.xml
@@ -5,7 +5,7 @@
     <label>Mail Archive</label>
     <label lang="de">Mail Archive</label>
 
-    <version>1.0.5</version>
+    <version>1.1.0</version>
     <copyright>Friends of Shopware</copyright>
     <license>MIT</license>
     <link>https://github.com/FriendsOfShopware/FroshMailArchive</link>
@@ -21,6 +21,7 @@
 <li>Download Mail as EML-File</li>
 <li>Search Mails</li>
 <li>shows notification for new mails, if accepted</li>
+<li>Resend emails with attachments</li>
 
 </ul>
 
@@ -47,6 +48,11 @@
 
         ]]>
     </description>
+
+    <changelog version="1.1.0">
+        <changes lang="de">Mails nochmals versenden</changes>
+        <changes>Resend mails</changes>
+    </changelog>
 
     <changelog version="1.0.5">
         <changes lang="de">Bugfix für nicht initial gesetzte Absender</changes>
